[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/vehicle/ControlAI.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/game_theme.tres" type="Theme" id=2]

[sub_resource type="CircleShape2D" id=5261]
radius = 628.013

[node name="ControllerAI" type="Node2D"]
position = Vector2( 26, 0 )
script = ExtResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 52.95
target_desired_distance = 30.0
avoidance_enabled = true
radius = 160.0

[node name="ScanningArea" type="Area2D" parent="."]
visible = false
position = Vector2( -24, 0 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScanningArea"]
shape = SubResource( 5261 )

[node name="ScanningRay" type="RayCast2D" parent="."]
position = Vector2( -24, 0 )
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 8
collide_with_areas = true

[node name="TargetRay" type="RayCast2D" parent="."]
position = Vector2( -24, 0 )
cast_to = Vector2( 128, 0 )
collision_mask = 12
collide_with_areas = true

[node name="Vision" type="Node2D" parent="."]

[node name="VisionRayCenter" type="RayCast2D" parent="Vision"]
position = Vector2( -23, 0 )
enabled = true
cast_to = Vector2( 302, 0 )

[node name="VisionRayLeft" type="RayCast2D" parent="Vision"]
position = Vector2( -27, -32 )
enabled = true
cast_to = Vector2( 104, 0 )

[node name="VisionRayRight" type="RayCast2D" parent="Vision"]
position = Vector2( -27, 32 )
enabled = true
cast_to = Vector2( 203, 0 )

[node name="VisionRay" type="RayCast2D" parent="."]
position = Vector2( -23, 0 )
enabled = true
cast_to = Vector2( 87, 0 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -64.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0

[node name="DirectionLine" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 20.0
default_color = Color( 0.313726, 0.317647, 1, 0.92549 )

[node name="TargetLine" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 15.0
default_color = Color( 0, 1, 0, 1 )

[node name="__BoltShape" type="Polygon2D" parent="."]
modulate = Color( 0.890196, 0.168627, 0.168627, 0.262745 )
position = Vector2( -29, 0 )
polygon = PoolVector2Array( -104, -48, -96, -56, 96, -56, 112, -40, 104, -32, 112, -24, 104, -16, 112, -8, 104, 0, 112, 8, 104, 16, 112, 24, 104, 32, 112, 40, 96, 56, -96, 56, -104, 48, -104, 0 )

[node name="Polygon2D" type="Polygon2D" parent="__BoltShape"]
position = Vector2( 32, 0 )
color = Color( 1, 1, 1, 0.298039 )
polygon = PoolVector2Array( 24, -48, 40, -32, 32, -16, 40, 0, 32, 16, 40, 32, 24, 48, 40, 48, 56, 32, 48, 16, 56, 0, 48, -16, 56, -32, 40, -48 )

[node name="Polygon2D4" type="Polygon2D" parent="__BoltShape"]
position = Vector2( 112, 73 )
scale = Vector2( -1, 1 )
color = Color( 1, 1, 1, 0.298039 )
polygon = PoolVector2Array( 16, -17, 32, -41, 40, -25, 56, -41, 56, -25, 72, -33, 72, -17 )

[node name="Polygon2D5" type="Polygon2D" parent="__BoltShape"]
position = Vector2( 112, -72 )
scale = Vector2( -1, -1 )
color = Color( 1, 1, 1, 0.298039 )
polygon = PoolVector2Array( 16, -16, 32, -40, 40, -24, 56, -40, 56, -24, 72, -32, 72, -16 )

[node name="__Label" type="Label" parent="."]
margin_left = 2.0
margin_top = 92.0
margin_right = 234.0
margin_bottom = 140.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 2 )
text = "asdwadawd"

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_navigation_finished"]
[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
